--- a/blogpost.html
+++ b/blogpost.html
@@ -18,9 +18,9 @@
             <div class="navLeft">Logo</div>
             <div class="navCenter">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="/home/alfred4863/Downloads/blog-in-html-css/index.html">Home</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/index.html">Home</a></li>
 
-                    <li class="nav-item"><a href="/home/alfred4863/Downloads/blog-in-html-css/contact.html">About Me</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/contact.html">About Me</a></li>
                 </ul>
             </div>
         </nav>
