--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
             <div class="navLeft">Logo</div>
             <div class="navCenter">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="/blog-in-html-css/index.html">Home</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/index.html">Home</a></li>
 
-                    <li class="nav-item"><a href="/blog-in-html-css/contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/contact.html">About Me</a></li>
                 </ul>
             </div>
             <form action="/blog-in-html-css/search.html">
