--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <header class="m-1">
         <nav class="navigation max-width-1  margin-auto">
             <div class="navLeft">
-                <a href="/blog-in-html-css/index.html">
+                <a href="Alfred4863.github.io/blob/main/index.html">
 
-                    Logo
+                    The Life and Works of José Rizal
                 </a>
             </div>
             <div class="navCenter">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="/blog-in-html-css/index.html">Home</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/index.html">Home</a></li>
 
-                    <li class="nav-item"><a href="/blog-in-html-css/contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/contact.html">About Me</a></li>
                 </ul>
             </div>
             <form action="/blog-in-html-css/search.html">
@@ -57,7 +57,7 @@
             <div class="home-articles ">
     
                 <div class="home-article center">
-                    <a href="/home/alfred4863/Downloads/blog-in-html-css/blogpost.html" class="text-center">
+                    <a href="Alfred4863.github.io/blob/main/blogpost.html" class="text-center">
 
                         <img src="img/Jose-Rizal-Button-Click.png " alt="">
                         <div class="home-article-bottom m-1">
