--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header class="m-1">
         <nav class="navigation max-width-1  margin-auto">
-            <div class="navLeft">Logo</div>
+            <div class="navLeft">The Life and Works of José Rizal</div>
             <div class="navCenter">
                 <ul class="nav-items">
                     <li class="nav-item"><a href="Alfred4863.github.io/blob/main/index.html">Home</a></li>
