--- a/search.html
+++ b/search.html
@@ -14,12 +14,12 @@
 <body>
     <header class="m-1">
         <nav class="navigation max-width-1  margin-auto">
-            <div class="navLeft">Logo</div>
+            <div class="navLeft">The Life and Works of José Rizal</div>
             <div class="navCenter">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="/blog-in-html-css/index.html">Home</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/index.html">Home</a></li>
 
-                    <li class="nav-item"><a href="/blog-in-html-css/blog-in-html-css/contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="Alfred4863.github.io/blob/main/contact.html">About Me</a></li>
                 </ul>
             </div>
             <form action="/blog-in-html-css/search.html">
