--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a href="Alfred4863.github.io/blob/main/contact.html">About Me</a></li>
                 </ul>
             </div>
-            <form action="/blog-in-html-css/search.html">
+            <form action="Alfred4863.github.io/blob/main/search.html">
                 <div class="navRight">
                     <input type="search" name="query" class="form-input " placeholder="Search Hear">
                     <button class="btn btn-pink" type="submit">Search </button>
